--- a/src/styles/HorizontalRow.module.css
+++ b/src/styles/HorizontalRow.module.css
@@ -38,6 +38,6 @@
 
 @media (max-width: 1000px) {
   .items {
-    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr)) !important;
+    grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr)) !important;
   }
 }
